[package]
name = "hide"
version = "0.1.2"
authors = ["Aydar <lesterrry@rambler.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "7.0.0"
rpassword = "5.0.1"
directories = "3.0.1"
serde = "1.0.119"
serde_derive = "1.0.119"
rust-crypto = "0.2.36"
progress_bar = "0.1.3"
serde_cbor = "0.11.1"
